--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,5 @@
 .header-area{
-    background-color: #dcdde1 ;
+    background-color:  #ffb8b8 ;
 }
 .logo{
     color: #c0392b;
@@ -20,5 +20,5 @@
     color:#e74c3c;
 }
 .active{
-    background-color: #ffb8b8;
+    background-color:#fff;
 }
