--- a/src/components/Qtopic/Qtopic.css
+++ b/src/components/Qtopic/Qtopic.css
@@ -15,6 +15,9 @@
     font-weight: 600px;
     margin-top: 10px;
 }
+.single-topic p{
+    color: #c0392b;
+}
 .topic-btn {
     border: none;
     font-weight: 600;
