--- a/src/components/Topics/Topics.css
+++ b/src/components/Topics/Topics.css
@@ -1,6 +1,9 @@
 .banner img {
-    width: 100%;
-    height: 500px;
+    height: 300px;
+}
+.details{
+    margin-top: 20px;
+    color:  #c0392b;
 }
 .topic-container {
     margin: 50px 0;
